--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ pillow
 psutil
 pykeyboard
 py-tgcalls==1.2.9
-#git+https://github.com/KurimuzonAkuma/pyrogram@dev
+ntgcalls==1.1.2
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
 pyyaml
 requests
